--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -231,6 +231,9 @@ Add Google or Microsoft translate API as options to translate the english defaul
 For the language translation cache (to avoid asking API for a translation if we already did once), include a hash digest of the original English text used to translate. That way if the hash changes for the current English text used (English is never translated as it's the default), we know we need to re-translate with a fresh API call (instead of using cached data), and also save the new hash digest of the current English text as well.
 
 
+Add additional ability to do telegram / discord webhooks in the new "crypto-data-bot" plugin, to query asset prices at different exchanges through telegram chat with the chat bot. Example: "/price btc-usd-coinbase"
+
+
 For the in-development 'on-chain-stats' plugin:
 Have it display on the 'more stats' page
 Use the 'usd asset comparision' chart template...different chains are in place of the assets, the telemetry items in place of the time period options.
@@ -344,15 +347,6 @@ Create a power user config option to toggle between plain text and HTML email. W
 
 
 Fully include all leverage in all portfolio summaries, with "(X% leverage)" next to each summary.
-
-
-Add additional ability to do telegram webhooks, to query asset prices at different exchanges through telegram chat with the chat bot. Example: "/price ETH/USDT @ Binance"
-
-
-Documentation for Webhook features.
-
-
-Add webhook keys on admin page.
 
 
 Do a gains / losses bar chart for the gains / losses summary (tooltip, like balance stats chart).
