--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5986,9 +5986,11 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -BUG FIX: Fixed bug introduced in v6.00.15 refactoring, related to timely re-creation of MAIN .htaccess / user.ini files upon app config revisions
 
--New setting on admin Reset page, to reset the ENTIRE Admin Config (back to the hard-coded defaults in the PHP configuration files)
+-BUG FIX: Miscellaneous (small) fixes
 
--New bundled plugin 'telegram-bot' (WORK-IN-PROGRESS, NON-FUNCTIONAL...will let you setup querying this app for data in telegram chat)
+-New bundled plugin 'crypto-data-bot' (WORK-IN-PROGRESS, NON-FUNCTIONAL...will let you setup querying this app for data in telegram chat)
+
+-New setting on admin Reset page, to reset the ENTIRE Admin Config (back to the hard-coded defaults in the PHP configuration files)
 
 -Added FULL webhook capability (FINALLY!) via the plugins system (see /DOCUMENTATION-ETC/PLUGINS-README.txt)
 
