--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -40,8 +40,34 @@ Prioritize building the admin interface / mobile templates / language translatio
 
 
 ///////////////////////////////////////////////////////
-BUGS / TESTS / UX / QA / OTHER SECTION
+DEBUGGING / TESTS / UX / QA / OTHER SECTION
 /////////////////////////////////////////////////////// 
+
+
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!   S Q U A S H   T H E   B U G S !   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+     ((((c,               ,7))))
+    (((((((              ))))))))
+     (((((((            ))))))))
+      ((((((@@@@@@@@@@@))))))))
+       @@@@@@@@@@@@@@@@)))))))
+    @@@@@@@@@@@@@@@@@@))))))@@@@
+   @@/,:::,\/,:::,\@@@@@@@@@@@@@@    
+   @@|:::::||:::::|@@@@@@@@@@@@@@@
+   @@\':::'/\':::'/@@@@@@@@@@@@@@
+    @@@@@@@@@@@@@@@@@@@@@@@@@@@
+      @@@@@@@@@@@@@@@@@@@@@@\
+         /    \        (     \
+        (      )        \     \
+         \    /          \        
+----------------------------------------------------------------------
+(CREDIT: https://asciiart.website/index.php?art=animals/insects/other)
+----------------------------------------------------------------------
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+===> WHEN DEBUGGING / TESTING, LEAVE "$dev_debug_php_errors" IN "app-lib/php/init.php" SET 
+===> LIKE SO, TO ALWAYS LOG ALL PARSE / FATAL PHP ERRORS DURING TESTING: (E_ERROR | E_PARSE)
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
 Rename 'debt-tracker' plugin to 'debt-interest-tracker'
