--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5446,7 +5446,7 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -Graphical interface capability for plugins
 
--New debt-tracker plugin (in interface on tools page, on by default)
+-New debt-interest-tracker plugin (in interface on tools page, on by default)
 
 -Housekeeping / code cleanup and optimization
 
@@ -5988,7 +5988,7 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -BUG FIX: Miscellaneous (small) fixes
 
--New bundled plugin 'crypto-data-bot' (WORK-IN-PROGRESS, NON-FUNCTIONAL...will let you setup querying this app for data in telegram chat)
+-New bundled plugin 'crypto-info-bot' (WORK-IN-PROGRESS, NON-FUNCTIONAL...will let you setup querying this app for data in telegram chat)
 
 -New setting on admin Reset page, to reset the ENTIRE Admin Config (back to the hard-coded defaults in the PHP configuration files)
 
@@ -6009,9 +6009,15 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 -------------------------------------------------------------------
 6.00.17:
 
+-BUG FIX: Fixed low-value coins (like Bonk Inu) not working (when added to the assets config)
+
 -BUG FIX: Fixed endless loop in security check on header domain data (sorry about that!)
 
+-BUG FIX: Miscellaneous (small) fixes
+
 -Optimized initiation logic to run faster in all runtime modes
+
+-Miscellaneous optimizations / user experience improvements
 
 -Revised / optimized DEMO config
 
